[project]
name = "ao3datadive"
version = "0.1.0"
description = "Create visualizations for AO3 tags using AO3 data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]
